# thtahs

./: README.md  thtahs.cabal
data/: components.csv  nv.csv  simulation.csv
src/: Main.hs
