name:                thtahs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/thtahs#readme
license:             BSD3
license-file:        LICENSE
author:              Hanneli Tavante
maintainer:          hannelita@gmail.com
copyright:           2019 Hanneli Tavante
category:            Engineering
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable thtahs
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       cassava,
                       vector,
                       bytestring,
                       text,
                       matrix,
                       hmatrix
